[tool.poetry]
name = "test"
version = "0.0.1"
description = "A test project"
authors = ["test <test@test.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
numpy = "^1.23.2"
toml = "^0.10.2"
cookiecutter-poetry = "^0.3.7"
isort = "^5.10.1"
click = "^8.1.3"

[tool.deptry]
ignore_dependencies = [
'toml'
]
