[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "foo"
version = "1.2.3"
requires-python = ">=3.7"
dependencies = [
    "toml",
    "urllib3>=1.26.12",
    "isort>=5.10.1",
    "click>=8.1.3",
    "requests>=2.28.1",
    "pkginfo>=1.8.3",
]

[project.optional-dependencies]
dev = [
    "black==22.10.0",
    "mypy==0.982",
]
test = [
    "pytest==7.2.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
